@@ -1,5 +1,10 @@
 2012-12-30  Russ Allbery  <rra@stanford.edu>
 
+	* ANSIColor.pm (PUSHCOLOR): Take an array like all the other
+	constant functions and join all arguments together before
+	manipulating it.
+	* t/basic.t: Multiple new tests for various weird edge cases.
+
 	* ANSIColor.pm (AUTOLOAD): Only honor ANSI_COLORS_DISABLED if it
 	is set to a true value.
 	(color): Likewise.
